{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "Azerty",
            "id": "e5e0b0ef-1302-4444-905c-24c4098bfe9c",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "6a3c95de-3ea0-40fc-9b0a-8252707d9c32",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "PassThrough",
                    "id": "ce903bbd-c858-4543-9228-fa046be78a6f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Sideways",
                    "id": "3d32a092-7dc1-46eb-851d-c069d6701019",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9ab944de-392c-47fd-aa2e-adc5976f4b43",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a49daca9-2965-48c8-aa53-22233a9e4d7c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6992c794-3323-49b6-a925-793bc4e92a75",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}